--- a/director-users-uaa-perms.html.md.erb
+++ b/director-users-uaa-perms.html.md.erb
@@ -72,6 +72,28 @@ Can view shared resources:
 Team admin cannot upload releases and stemcells.
 
 ---
+## <a id="stemcell-uploader"></a> Stemcell uploader
+
+<p class="note">Note: This feature is available with bosh-release v261.2+.</p>
+
+Scopes:
+
+- `bosh.stemcells.upload`: user can upload new stemcells
+
+Note that CLI will try to list stemcells before uploading given stemcell, hence `bosh upload stemcell` CLI command requires users/clients to have `bosh.read` scope as well.
+
+---
+## <a id="release-uploader"></a> Release uploader
+
+<p class="note">Note: This feature is available with bosh-release v261.2+.</p>
+
+Scopes:
+
+- `bosh.releases.upload`: user can upload new releases
+
+Note that CLI will try to list releases before uploading given release, hence `bosh upload release` CLI command requires users/clients to have `bosh.read` scope as well.
+
+---
 ## <a id="errors"></a> Errors
 
 ```
