fix docs for vsphere cpi

--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -189,7 +189,7 @@ Example of a CPI configuration that will place VMs into `BOSH_CL` cluster within
 
 ```yaml
 properties:
-  vsphere:
+  vcenter:
     host: 172.16.68.3
     user: root
     password: vmware
@@ -207,7 +207,7 @@ Example that places VMs by default into `BOSH_RP` vSphere resource pool with NSX
 
 ```yaml
 properties:
-  vsphere:
+  vcenter:
     host: 172.16.68.3
     user: root
     password: vmware
