--- a/release.html.md.erb
+++ b/release.html.md.erb
@@ -6,7 +6,7 @@ A release is a versioned collection of configuration properties, configuration t
 
 A release is the layer placed on top of a [stemcell](stemcell.html). They are self-contained and provide very specific software for the purpose of that release. For example, a Redis release might include start-up and shutdown scripts for `redis-server`, a tarball with Redis source code obtained from the Redis official website, and a few configuration properties allowing cluster operators to alter that Redis configuration.
 
-By allowing layering of stemcells and releases, BOSH is able to solve problems such as "how does one make sure that the compiled version of the software is reliably available throughout the deploy", or "how to version and roll out updated software to the whole cluster, VM-by-VM, that other orchestration software is not able to solve".
+By allowing layering of stemcells and releases, BOSH is able to solve problems such as "how does one make sure that the compiled version of the software is reliably available throughout the deploy", or "how to version and roll out updated software to the whole cluster, VM-by-VM", that other orchestration software is not able to solve.
 
 There are two common formats in which releases are distributed: artifacts checked into a git repository and as a single tarball.
 
