--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -145,6 +145,10 @@ See [Recent Additions and Updates](recent.html).
         * [Post-deploy script](post-deploy.html)
         * [Drain script](drain.html)
     * [Scheduled processes](scheduled-procs.html)
+* [Releases and Jobs in Windows](windows.html)
+    * [Releases](windows.html#releases)
+    * [Jobs](windows.html#jobs)
+    * [Sample BOSH Windows Release](windows-sample-release.html)
 * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
