--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -64,6 +64,8 @@ See [Recent Additions and Updates](recent.html).
     * [Managing stemcells](managing-stemcells.html)
 * [Deploying step-by-step](deploying-step-by-step.html)
 * [CLI commands](sysadmin-commands.html)
+    * [CLI Environments](cli-global-flags.html)
+    * [Global Flags](cli-global-flags.html)
 * [Director tasks](director-tasks.html)
 * [Troubleshooting](tips.html)
 
