moving cli v2 docs around

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -63,9 +63,10 @@ See [Recent Additions and Updates](recent.html).
     * [Managing releases](managing-releases.html)
     * [Managing stemcells](managing-stemcells.html)
 * [Deploying step-by-step](deploying-step-by-step.html)
-* [CLI commands](sysadmin-commands.html)
-    * [CLI Environments](cli-global-flags.html)
+* [CLI v1](sysadmin-commands.html)
+* [CLI v2](cli-v2.html)
     * [Global Flags](cli-global-flags.html)
+    * [CLI Environments](cli-envs.html)
 * [Director tasks](director-tasks.html)
 * [Troubleshooting](tips.html)
 
