some more documenting of cli v2 commands

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -79,6 +79,7 @@ See [Recent Additions and Updates](recent.html).
 * [Runtime config](runtime-config.html)
     * [Addons](runtime-config.html#addons)
     * [Common addons](addons-common.html)
+* [CPI config](cpi-config.html)
 * [Trusted certificates](trusted-certs.html)
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
