--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,7 +2,8 @@
 title: Recent Additions and Updates
 ---
 
-* [CLI v2 vs v1](cli-v2.html)
+* [CPI config](cpi-config.html)
+* [CLI v2](cli-v2.html)
 
 ---
 
